[package]
authors = [
  "Martin Habovštiak <martin.habovstiak@gmail.com>",
  "Aiden McClelland <aiden@start9labs.com>",
]
description = "internal proxy for pruned nodes for bitcoin core"
edition = "2021"
name = "btc-rpc-proxy"
version = "0.4.0"

[lib]
name = "btc_rpc_proxy"
path = "src/lib.rs"

[features]

[dependencies]
async-channel = "1.8.0"
base32 = "0.4.0"
base64 = "0.21.2"
bitcoin = { version = "0.30.0", features = ["serde"] }
color-eyre = "0.6.2"
# derive_more = "0.99.17"
enum_future = "0.1"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.3"
hyper = { version = "0.14.26", features = [
  "client",
  "server",
  "stream",
  "http2",
  "http1",
  "tcp",
] }
itertools = "0.10.5"
lazy_static = "1.4.0"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
socks = "0.3.3"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
thiserror = "1.0.22"
